RESOLVED FIXED35534
-[WebArchive initWithCoder:] leaks
https://bugs.webkit.org/show_bug.cgi?id=35534
Summary -[WebArchive initWithCoder:] leaks
Jim Correia
Reported 2010-03-01 11:39:14 PST
As of r41903, -[WebArchive initWithCoder:] leaks. It retains the objects decoded from the unarchiver, passes them to another initializer, and never releases them. This bug was introduced in r31281.
Attachments
Don't retain what we don't own. (1.58 KB, patch)
2010-03-04 09:04 PST, Brady Eidson
ggaren: review+
beidson: commit-queue-
Simon Fraser (smfr)
Comment 1 2010-03-01 11:42:36 PST
Brady Eidson
Comment 2 2010-03-01 11:44:39 PST
Brady Eidson
Comment 3 2010-03-04 09:04:59 PST
Created attachment 50028 [details] Don't retain what we don't own.
Geoffrey Garen
Comment 4 2010-03-04 09:11:02 PST
Comment on attachment 50028 [details] Don't retain what we don't own. r=me
Brady Eidson
Comment 5 2010-03-04 09:26:01 PST
Note You need to log in before you can comment on or make changes to this bug.