REGRESSION (31281): -[WebArchive initWithCoder:] leaks <rdar://problem/7702420> and https://bugs.webkit.org/show_bug.cgi?id=35534

Reviewed by Geoff Garen.

* WebView/WebArchive.mm:
(-[WebArchive initWithCoder:]): Don't retain objects we don't own.



Canonical link: https://commits.webkit.org/46826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55529 268f45cc-cd09-0410-ab3c-d52691b4dbfc